--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^3.2.20",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "js-md5": "^0.7.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +25,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "svg-sprite-loader": "^6.0.11"
   },
   "eslintConfig": {
     "root": true,
