--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "js-md5": "^0.7.3",
+    "mockjs": "^1.1.0",
     "node-sass": "^9.0.0",
     "sass-loader": "^13.3.0",
     "vue": "^3.2.13",
